--- a/packages/erizabesu/package.json
+++ b/packages/erizabesu/package.json
@@ -1,6 +1,6 @@
 {
   "name": "erizabesu",
-  "version": "0.4.0",
+  "version": "1.0.0",
   "main": "dist/erizabesu.js",
   "license": "MIT",
   "repository": {
@@ -8,7 +8,10 @@
     "url": "https://github.com/ShredderMing/erizabesu/tree/master/packages/erizabesu"
   },
   "scripts": {
-    "build": "rollup -c rollup.config.js"
+    "build": "npm run -s transpile && npm run -s minify && npm run -s size",
+    "transpile": "rollup -c rollup.config.js",
+    "minify": "uglifyjs $npm_package_main -cm -o $npm_package_main --source-map filename=${npm_package_main}.map",
+    "size": "echo \"gzip size: $(gzip-size $npm_package_main)\""
   },
   "peerDependencies": {
     "preact": "*"
@@ -20,9 +23,11 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-preset-env": "^1.6.0",
+    "gzip-size-cli": "^2.1.0",
     "postcss-discard-comments": "^2.0.4",
     "rollup": "^0.50.0",
     "rollup-plugin-babel": "^3.0.2",
-    "rollup-plugin-postcss": "^0.5.5"
+    "rollup-plugin-postcss": "^0.5.5",
+    "uglify-js": "^3.3.4"
   }
 }
