--- a/packages/erizabesu-indicators/package.json
+++ b/packages/erizabesu-indicators/package.json
@@ -24,17 +24,17 @@
     "preact": "*"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-plugin-transform-react-jsx": "^6.24.1",
-    "babel-preset-env": "^1.6.0",
-    "gzip-size-cli": "^2.1.0",
-    "postcss-discard-comments": "^2.0.4",
-    "rollup": "^0.57.1",
-    "rollup-plugin-babel": "^3.0.2",
-    "rollup-plugin-node-resolve": "^3.3.0",
-    "rollup-plugin-postcss": "^1.5.1",
-    "uglify-js": "^3.3.21"
+    "@babel/core": "^7.12.8",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@babel/plugin-proposal-object-rest-spread": "^7.12.1",
+    "@babel/plugin-transform-react-jsx": "^7.12.7",
+    "@babel/preset-env": "^7.12.7",
+    "@rollup/plugin-babel": "^5.2.1",
+    "gzip-size-cli": "^4.0.0",
+    "postcss-discard-comments": "^4.0.2",
+    "rollup": "^2.33.3",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-postcss": "^3.1.8",
+    "uglify-js": "^3.12.0"
   }
 }
